src/objects/acfStamp_Duty_Table__c.object
<CustomObject>
    <fields>
        <fullName>Acf_Base_Value__c</fullName>
        <label>Base Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acf_Property_value_from__c</fullName>
        <label>Property value from</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acf_Property_value_to__c</fullName>
        <label>Property value to</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acf_Purpose__c</fullName>
        <label>Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Owner Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Acf_Variable_rate__c</fullName>
        <label>Variable rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>acfDivide_Number__c</fullName>
        <label>Divide Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acfState__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Stamp Duty Table</relationshipLabel>
        <relationshipName>Stamp_Duty_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stamp Duty Table</label>
    <nameField>
        <displayFormat>PSD-{0000}</displayFormat>
        <label>Purchase Stamp Duty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stamp Duty Table</pluralLabel>
    <recordTypes>
        <fullName>Stamp_Duty</fullName>
        <active>true</active>
        <label>Stamp Duty</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transfer_Fee</fullName>
        <active>true</active>
        <label>Transfer Fee</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>